systemjs config added

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -11,6 +11,7 @@
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
+    <!-- Development mod -->
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
@@ -19,5 +20,7 @@
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
+     <!-- Production mod -->
+     <!-- <script src="assets/js/bundle.min.js"></script> -->
   </body>
 </html>
