concurrent run of nodejs and typescript compiler + static paths fixed

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
-    <script src="../node_modules/core-js/client/shim.min.js"></script>
-    <script src="../node_modules/zone.js/dist/zone.js"></script>
-    <script src="../node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="/core-js/client/shim.min.js"></script>
+    <script src="/zone.js/dist/zone.js"></script>
+    <script src="/reflect-metadata/Reflect.js"></script>
+    <script src="/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
     <!-- Development mod -->
     <script src="systemjs.config.js"></script>
@@ -19,7 +19,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <app-root>Loading...</app-root>
      <!-- Production mod -->
      <!-- <script src="assets/js/bundle.min.js"></script> -->
   </body>
