--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Test Storage</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="/core-js/client/shim.min.js"></script>
