--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,14 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
+  <base href="/">
   <!-- 3. Display the application -->
   <body>
     <ts-root>Loading...</ts-root>
      <!-- Production mod -->
      <!-- <script src="assets/js/bundle.min.js"></script> -->
   </body>
-  <!--
+  <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  --> 
+  
 </html>
