e2e protractor tests added

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <title>Test Storage</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- bootstrap check also in node_modules -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
