--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,25 @@
   <title>Test Storage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/css/loading.css?v=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,400&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
+
+  <div class="loading">
+    <i class="fa fa-spinner fa-spin fa-5x fa-fw"></i>
+    <div>Loading...</div>
+  </div>
+  <!--
+  <div id="root-loading" class="text-center">
+    <i class="fa fa-spinner fa-spin fa-5x fa-fw"></i>
+    <div>Loading...</div>
+  </div>
+-->
+
 </body>
 
 </html>
